# MakiBot

./: .gitignore  README.md  Spacefile  main.py  pyproject.toml  requirements.txt
data/: darksoulscharacterlist.json  drcharacterlist.json  jojocharacterlist.json  mlpcharacterlist.json  opfemalecharacterlist.json  opmalecharacterlist.json  opokamacharacterlist.json  overwatchcharacterlist.json  zerocharacterlist.json
examples/: get_wikimedia_items.py  mongotest.py
