[project]
name = ""
version = ""
description = ""
authors = [
    {name = "asiernoide"},
]
dependencies = [
    "discohook @ git+https://github.com/jnsougata/discohook",
    "requests>=2.30.0",
    "bs4>=0.0.1",
    "pymongo>=4.3.3",
    "pip>=23.1.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}
